--- a/style.css
+++ b/style.css
@@ -192,43 +192,44 @@ charcell {
     height: 15px;
     margin: 0;
     padding: 0;
-    display: inline-block;
-    line-height: 9px;
+    display: block;
+    float: left;
     background-repeat: no-repeat;
     background-image: url("hp2640.png");
     background-blend-mode: screen;
 }
 
 charcursor {
-    float: left;
     width: 9px;
     height: 15px;
-    margin: 0;
+    margin: 0 -9px 0 0;
     padding: 0;
-    display: inline-block;
-    line-height: 9px;
+    display: block;
+    float: left;
     background-repeat: no-repeat;
     background-image: url("hp2640.png");
     background-blend-mode: screen;
     background-position: -135px -225px;
+    animation: blink-animation 0.5s infinite;
+    -webkit-animation: blink-animation 0.5s infinite;
 }
 
 .blink {
-    animation: blink-animation 1s infinite;
-    -webkit-animation: blink-animation 1s infinite;
+    animation: blink-animation 0.5s infinite;
+    -webkit-animation: blink-animation 0.5s infinite;
 }
 @keyframes blink-animation {
     0% {opacity: 0;}
-    15% {opacity: 1;}
+    5% {opacity: 1;}
     50% {opacity: 1;}
-    65% {opacity: 0;}
+    55% {opacity: 0;}
     100% {opacity: 0;}
 }
 @-webkit-keyframes blink-animation blink-animation {
     0% {opacity: 0;}
-    15% {opacity: 1;}
+    5% {opacity: 1;}
     50% {opacity: 1;}
-    65% {opacity: 0;}
+    55% {opacity: 0;}
     100% {opacity: 0;}
 }
 
